--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,16 +1,13 @@
 ---
 layout: archive
-title: "Talks and presentations"
-permalink: /talks/
+title: "Research Projects"
 author_profile: true
+
 ---
+## Einstein Center Population Diversity (ECPD)
 
-{% if site.talkmap_link == true %}
+Einstein Foundation Berlin
+https://www.einsteinfoundation.de/en/foundation/about-us/
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
 
-{% endif %}
-
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
+https://medizinsoziologie-reha-wissenschaft.charite.de/en/research/aging_research/einstein_center_population_diversity/
