--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -7,8 +7,6 @@ author_profile: true
 ---
 ## Einstein Center Population Diversity (ECPD)
 
-Einstein Foundation Berlin
-https://www.einsteinfoundation.de/en/foundation/about-us/
-
+This research is funded by the [Einstein Foundation Berlin](https://www.einsteinfoundation.de/en/foundation/about-us/).
 
 https://medizinsoziologie-reha-wissenschaft.charite.de/en/research/aging_research/einstein_center_population_diversity/
