--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,14 +1,8 @@
 ---
 layout: archive
-title: "Portfolio"
+title: "CV"
 permalink: /portfolio/
 author_profile: true
 ---
 
-{% include base_path %}
-
-
-{% for post in site.portfolio %}
-  {% include archive-single.html %}
-{% endfor %}
-
+{file: "CV_EA_20231125.pdf", title:"CV"}
